# macos-mcp-server

./: .gitignore  README.md  convert_pdfs_to_text.py  generate_objc_pdfs.py
AppScripts/text/: AppleScript Utility.txt  Bluetooth File Exchange.txt  Calendar.txt  Console.txt  Contacts.txt  Finder.txt  GarageBand.txt  Google Chrome.txt  Image Events.txt  Instruments.txt  Keynote.txt  Mail.txt  Music.txt  Notes.txt  Numbers.txt  Pages.txt  Photos.txt  QuickTime Player.txt  README.md  Reminders.txt  Safari.txt  Screen Sharing.txt  Script Editor.txt  Shortcuts Events.txt  Shortcuts.txt  Simulator.txt  System Events.txt  System Settings.txt  TV.txt  Terminal.txt  VoiceOver.txt  Xcode.txt
mcp-client/: Cargo.toml  README.md
mcp-client-ui/: README.md  index.html  package-lock.json  package.json
mcp-client-ui/server/: index.js  storage.js
mcp-client-ui/server/data/: conversations.json
mcp-client-ui/src/: App.jsx  styles.css
mcp-client/src/: client.rs  main.rs
rust-mcp-client/: Cargo.toml  README.md
rust-mcp-client/src/: client.rs  main.rs
rust-mcp-server/: Cargo.toml  README.md
rust-mcp-server/src/: config.rs  main.rs  protocol.rs  state.rs  tools.rs
rust-mcp-server/src/server/: mod.rs
rust-mcp-server/src/transport/: mod.rs  stdio.rs
tools/: pdf2text.swift  text2pdf.swift
tools/.build/: pdf2text  text2pdf
tools/.build/ModuleCache/1025DYQKWKBAF/: AvailabilityMacros-37BGBEWTDMWX1.pcm  CFNetwork-Q0IIFZCOTOEA.pcm  CoreFoundation-1P741AFH132ZT.pcm  CoreGraphics-1NEFE79JVTGUH.pcm  DarwinFoundation-1KRY4DO7ZDURH.pcm  DiskArbitration-15XXVBR41Y8DJ.pcm  (+66 more)
(+221 files in other folders)
