[package]
name = "mcp-client"
version = "0.1.0"
edition = "2024"

[lib]
name = "mcp_client"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
async-openai = "0.20"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "process", "io-util", "io-std", "sync", "time"] }
